# snitch

./: Cargo.toml  Dockerfile  README.md  alertmanager.yml  config.toml.example  docker-compose.yaml  haproxy.cfg
docs/: alerts.md  watchdog.md
src/: main.rs  reference  settings.rs
src/api/: mod.rs
src/api/v1/: handlers.rs  mod.rs  models.rs
src/db/: conn.rs  mod.rs  redis.rs
src/models/: README.md  alert_log.rs  app_state.rs  mod.rs
src/services/: alert_service.rs  db_services.rs  mod.rs  watchdog_service.rs
src/utils/: README.md  auth.rs  ip.rs
