[package]
name = "snitch"
authors = ["rotkonetworks"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = "^0.12"
toml = "^0.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "^0.11"
dotenv = "^0.15.0"
config = "^0.14"


tokio-postgres = "^0.7"
redis = "^0.25.0"
bb8 = "^0.8.0"
bb8-postgres = "^0.8.0"
bb8-redis = "^0.15.0"
serde_json = "^1.0"
# sqlx = { version = "^0.7", features = ["postgres", "runtime-tokio-native-tls"] }
